# django-themes

./: .gitignore  CLASSIFIERS.txt  LICENSE  MANIFEST.in  README  README.md  setup.cfg  setup.py
django/contrib/themes/: admin.py  context_processors.py  middleware.py  models.py  urls.py  views.py
themes/: __init__.py  admin.py  context_processors.py  managers.py  models.py  signals.py  urls.py  views.py
