[metadata]

name=django-themes
description = A powerful application that can be used to develop themes to completely reskin your django apps.
long_description = file: README.md
url = http://github.com/LimpidTech/django-themes

version = 0.1

author = Bailey Stoner
author_email = monokrome@monokro.me

classifiers = file: CLASSIFIERS.txt
keywords = web,django,menu,navigation

packages = find:

[options]

zip_safe = False

[options.package_data]
* = *.md *.txt *.html
